--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es6",
+        "target": "es2016",
         "declaration": true,
-        "noImplicitAny": true,
-        "experimentalDecorators": true
+        "noImplicitAny": true
     }
 }
