--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "gulp-typescript": "latest",
     "merge2": "latest",
     "mocha": "latest",
-    "run-sequence": "latest",
-    "ts-node": "latest",
+    "source-map-support": "latest",
     "typescript": "2.x.x"
   },
   "repository": {
